--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: pages-themes/merlot@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-show_downloads: true
+show_downloads: false
 
 title: Ron Duncan<br> - a Celebration
 description: All about our Ron, wonderful and loved
