--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ plugins:
 
 show_downloads: false
 
-title: Ron Duncan<br> - a Celebration
+title: RON DUNCAN<br> - A CELEBRATION
 description: All about our Ron, wonderful and loved
