--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,10 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
+github:
+  is_project_page: false
+
+
 show_downloads: false
 
 title: RON DUNCAN<br> - A CELEBRATION
